--- a/2D/style.css
+++ b/2D/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400i&display=swap');
+
 html, body {
     width: 100%;
     height: 100%;
@@ -44,6 +46,7 @@ canvas {
 
 .function-input {
     font-size: 1.5rem;
+    font-family: 'Merriweather', serif;
     display: inline;
     box-sizing: border-box;
 }
