--- a/style.css
+++ b/style.css
@@ -13,6 +13,24 @@ canvas {
     margin: 0;
 }
 
+.main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: #000;
+    animation: gradient-bg 5s ease-in infinite alternate;
+    color: #fff;
+    padding: 20% 0;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.main h3 {
+    font-family: sans-serif;
+    font-weight: 500;
+}
+
 #HUD {
     position: absolute;
     top: 5px;
@@ -73,4 +91,20 @@ canvas {
 
 button {
     font-size: 1.25rem;
+}
+
+a.ui {
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: 2rem;
+    margin: 10px;
+}
+
+@keyframes gradient-bg {
+    from {
+        background: #0c0a19;
+    }
+    to {
+        background: #24204c;
+    }
 }
