--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ canvas {
     font-weight: 500;
 }
 
+.main h1, .main h3 {
+    text-align: center;
+    margin-left: .8rem;
+    margin-right: .8rem;
+}
+
 #HUD {
     position: absolute;
     top: 5px;
